--- a/.github/workflows/MPaint_build.yml
+++ b/.github/workflows/MPaint_build.yml
@@ -163,7 +163,8 @@ jobs:
         cd Setup
         iscc "${{env.PLUG}}.iss"
         mkdir "${{matrix.folder}}/free/Manual install"
-        mv "${{matrix.folder}}/free/*" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/*.*" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/free/MPaint/" "${{matrix.folder}}/free/Manual install/"
         mv "Output/${{env.PLUG}} Installer.exe" "${{matrix.folder}}/free"
 
     - uses: actions/upload-artifact@v3
