--- a/.github/workflows/PNCH_build.yml
+++ b/.github/workflows/PNCH_build.yml
@@ -218,8 +218,8 @@ jobs:
         iscc "${{env.PLUG}} Free.iss"
         mkdir "${{matrix.folder}}/paid/Manual install"
         mkdir "${{matrix.folder}}/free/Manual install"
-        mv "${{matrix.folder}}/paid/*" "${{matrix.folder}}/paid/Manual install/"
-        mv "${{matrix.folder}}/free/*" "${{matrix.folder}}/free/Manual install/"
+        mv "${{matrix.folder}}/paid/*.*" "${{matrix.folder}}/paid/Manual install/"
+        mv "${{matrix.folder}}/free/*.*" "${{matrix.folder}}/free/Manual install/"
         mv "Output/${{env.PLUG}} Installer.exe" "${{matrix.folder}}/paid"
         mv "Output/${{env.PLUG}} Free Installer.exe" "${{matrix.folder}}/free"
 
