--- a/.github/workflows/CRMBL_build.yml
+++ b/.github/workflows/CRMBL_build.yml
@@ -3,6 +3,7 @@ name: CRMBL Build
 env:
   PLUG: CRMBL
   NOSPACE: CRMBL
+  LOWERCASE: crmbl
 
 on:
   push:
@@ -211,7 +212,7 @@ jobs:
 
     - name: (windows) build installer
       if: startsWith(matrix.os, 'windows')
-      id: installer
+      id: installer_windows
       run: |
         cd Setup
         iscc "${{env.PLUG}}.iss"
@@ -222,6 +223,22 @@ jobs:
         mv "${{matrix.folder}}/free/*.*" "${{matrix.folder}}/free/Manual install/"
         mv "Output/${{env.PLUG}} Installer.exe" "${{matrix.folder}}/paid"
         mv "Output/${{env.PLUG}} Free Installer.exe" "${{matrix.folder}}/free"
+
+    - name: (mac) build installer
+      if: startsWith(matrix.os, 'macos')
+      id: installer_mac
+      run: |
+        cd Setup
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/Components" --idenifier com.unplugred.${{matrix.LOWERCASE}}-au.pkg --version 1.1.1 --component "${{matrix.folder}}/paid/${{matrix.PLUG}}.component" ${{matrix.LOWERCASE}}-au.pkg
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/VST3" --idenifier com.unplugred.${{matrix.LOWERCASE}}-vst3.pkg --version 1.1.1 --component "${{matrix.folder}}/paid/${{matrix.PLUG}}.vst3" ${{matrix.LOWERCASE}}-vst3.pkg
+        pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP" --idenifier com.unplugred.${{matrix.LOWERCASE}}-clap.pkg --version 1.1.1 --component "${{matrix.folder}}/paid/${{matrix.PLUG}}.clap" ${{matrix.LOWERCASE}}-clap.pkg
+        productbuild --synthesize --package ${{matrix.LOWERCASE}}-au.pkg --package ${{matrix.LOWERCASE}}-clap.pkg --package ${{matrix.LOWERCASE}}-vst3.pkg distribution.xml
+        productbuild --distribution distribution.xml --resources "${{env.PLUG}} Installer.pkg"
+        mkdir "${{matrix.folder}}/paid/Manual install"
+        mkdir "${{matrix.folder}}/free/Manual install"
+        mv "${{matrix.folder}}/paid/*.*" "${{matrix.folder}}/paid/Manual install/"
+        mv "${{matrix.folder}}/free/*.*" "${{matrix.folder}}/free/Manual install/"
+        mv "${{env.PLUG}} Installer.pkg" "${{matrix.folder}}/paid"
 
     - uses: actions/upload-artifact@v3
       with:
