--- a/.github/workflows/CRMBL_build.yml
+++ b/.github/workflows/CRMBL_build.yml
@@ -232,11 +232,15 @@ jobs:
         pkgbuild --install-location "/Library/Audio/Plug-Ins/Components" --identifier com.unplugred.${{env.LOWERCASE}}-au.pkg --version 1.1.1 --component "${{matrix.folder}}/paid/${{env.PLUG}}.component" ${{env.LOWERCASE}}-au.pkg
         pkgbuild --install-location "/Library/Audio/Plug-Ins/VST3" --identifier com.unplugred.${{env.LOWERCASE}}-vst3.pkg --version 1.1.1 --component "${{matrix.folder}}/paid/${{env.PLUG}}.vst3" ${{env.LOWERCASE}}-vst3.pkg
         pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP" --identifier com.unplugred.${{env.LOWERCASE}}-clap.pkg --version 1.1.1 --component "${{matrix.folder}}/paid/${{env.PLUG}}.clap" ${{env.LOWERCASE}}-clap.pkg
-        productbuild --distribution CRMBL.xml --resources ./assets/ "${{env.PLUG}} Installer.pkg"
+        productbuild --distribution "${{env.PLUG}}.xml" --resources ./assets/ "${{env.PLUG}} Installer.pkg"
         mkdir -pv "${{matrix.folder}}/paid/Manual install"
         mkdir -pv "${{matrix.folder}}/free/Manual install"
-        mv -v "${{matrix.folder}}/paid/*.*" "${{matrix.folder}}/paid/Manual install/"
-        mv -v "${{matrix.folder}}/free/*.*" "${{matrix.folder}}/free/Manual install/"
+        mv -v "${{matrix.folder}}/paid/${{env.PLUG}}.component" "${{matrix.folder}}/paid/Manual install/"
+        mv -v "${{matrix.folder}}/paid/${{env.PLUG}}.vst3" "${{matrix.folder}}/paid/Manual install/"
+        mv -v "${{matrix.folder}}/paid/${{env.PLUG}}.clap" "${{matrix.folder}}/paid/Manual install/"
+        mv -v "${{matrix.folder}}/free/${{env.PLUG}}.component" "${{matrix.folder}}/free/Manual install/"
+        mv -v "${{matrix.folder}}/free/${{env.PLUG}}.vst3" "${{matrix.folder}}/free/Manual install/"
+        mv -v "${{matrix.folder}}/free/${{env.PLUG}}.clap" "${{matrix.folder}}/free/Manual install/"
         mv "${{env.PLUG}} Installer.pkg" "${{matrix.folder}}/paid"
 
     - uses: actions/upload-artifact@v3
