--- a/.github/workflows/CRMBL_build.yml
+++ b/.github/workflows/CRMBL_build.yml
@@ -224,6 +224,14 @@ jobs:
         mv "Output/${{env.PLUG}} Installer.exe" "${{matrix.folder}}/paid"
         mv "Output/${{env.PLUG}} Free Installer.exe" "${{matrix.folder}}/free"
 
+    - name: (mac) import installer certificates
+      if: startsWith(matrix.os, 'macos')
+      id: import_installer_certificates
+      uses: apple-actions/import-codesign-certs@v2
+      with:
+        p12-file-base64: ${{ secrets.DEV_ID_INSTALLER_CERT }}
+        p12-password: ${{ secrets.DEV_ID_INSTALLER_PASSWORD }}
+
     - name: (mac) build installer
       if: startsWith(matrix.os, 'macos')
       id: installer_mac
@@ -233,6 +241,9 @@ jobs:
         pkgbuild --install-location "/Library/Audio/Plug-Ins/VST3" --identifier com.unplugred.${{env.LOWERCASE}}-vst3.pkg --version 1.1.1 --component "${{matrix.folder}}/paid/${{env.PLUG}}.vst3" ${{env.LOWERCASE}}-vst3.pkg
         pkgbuild --install-location "/Library/Audio/Plug-Ins/CLAP" --identifier com.unplugred.${{env.LOWERCASE}}-clap.pkg --version 1.1.1 --component "${{matrix.folder}}/paid/${{env.PLUG}}.clap" ${{env.LOWERCASE}}-clap.pkg
         productbuild --distribution "${{env.PLUG}}.xml" --resources ./assets/ "${{env.PLUG}} Installer.pkg"
+        codesign --force -s "${{ secrets.DEVELOPER_ID_INSTALLER }}" -v "${{env.PLUG}} Installer.pkg" --deep --strict --options=runtime --timestamp
+        xcrun notarytool submit "${{env.PLUG}} Installer.pkg" --apple-id ${{ secrets.NOTARIZATION_USERNAME }} --password ${{ secrets.NOTARIZATION_PASSWORD }} --team-id ${{ secrets.TEAM_ID }} --wait
+        xcrun stapler staple "${{env.PLUG}} Installer.pkg"
         mkdir -pv "${{matrix.folder}}/paid/Manual install"
         mkdir -pv "${{matrix.folder}}/free/Manual install"
         mv -v "${{matrix.folder}}/paid/${{env.PLUG}}.component" "${{matrix.folder}}/paid/Manual install/"
