--- a/.github/workflows/CRMBL_build.yml
+++ b/.github/workflows/CRMBL_build.yml
@@ -229,8 +229,8 @@ jobs:
       id: import_installer_certificates
       uses: apple-actions/import-codesign-certs@v2
       with:
-        p12-file-base64: ${{ secrets.DEV_ID_INSTALLER_CERT }}
-        p12-password: ${{ secrets.DEV_ID_INSTALLER_PASSWORD }}
+        p12-file-base64: ${{ secrets.DEV_ID_INSTALL_CERT }}
+        p12-password: ${{ secrets.DEV_ID_INSTALL_PASSWORD }}
 
     - name: (mac) build installer
       if: startsWith(matrix.os, 'macos')
