--- a/plugins/scope/CMakeLists.txt
+++ b/plugins/scope/CMakeLists.txt
@@ -5,6 +5,7 @@ juce_add_plugin("${BaseTargetName}"
 	COMPANY_NAME "unplugred"
 	COMPANY_WEBSITE "https://vst.unplug.red"
 	COMPANY_EMAIL "melody@unplug.red"
+	ICON_BIG resources/icon.png
 	FORMATS Standalone VST3 AU
 	IS_SYNTH FALSE
 	NEEDS_MIDI_INPUT FALSE
